Fix spacing on map

--- a/frontend/src/Components/Map/index.css
+++ b/frontend/src/Components/Map/index.css
@@ -1,5 +1,5 @@
 #Map {
-  height: 30em;
+  height: 22em;
   /* width: 45%; */
 }
 
